--- a/templates/index.html
+++ b/templates/index.html
@@ -78,8 +78,8 @@
                             <a href="javascript:void(0)" id="help-fiw" class="t">what's this?</a>
                         </label>
                         <select id="fiw" name="realm" tabindex="3">
-                            <option value="wifimetropolitano" selected="selected">
-                                WiFimetropolitano (Città Metropolitana di Roma)
+                            <option value="{{ fiw_default_realm.value }}" selected="selected">
+                                {{ fiw_default_realm.label }}
                             </option>
                         </select>
                     </p>
