Removed hardcoded alt attribute to logo2.png

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,8 +63,7 @@
                 <form action="{{ fiw_login_form_action }}" method="post" name="userauth">
                     {% if fiw_login_logo2 %}
                     <p class="center" id="logo2">
-                        <img src="themes/{{ fiw_login_theme }}/images/logo2.png"
-                            alt="WiFi metropolitano">
+                        <img src="themes/{{ fiw_login_theme }}/images/logo2.png" alt="">
                     </p>
                     {% endif %}
                     <p>
