Open related links in new tabs

--- a/templates/index.html
+++ b/templates/index.html
@@ -138,7 +138,7 @@
             {% if fiw_related_links %}
             <div id="related">
                 {% for link in fiw_related_links %}
-                <a href="{{ link.href }}">
+                <a href="{{ link.href }}" target="_blank">
                     <img src="{{ link.src }}" alt="{{ link.alt }}" height="90">
                 </a>
                 {% endfor %}
